feat(price): get all prices by category id
