# server/src/modules/prices/price.schema.ts
@@ -4,6 +4,10 @@ export const paramsSchema = z.object({
     id: z.coerce.number().int().positive("ID must be a positive number"),
 });
 
+export const categoryPriceParamsSchema = z.object({ 
+    categoryId: z.coerce.number().int().positive("Category ID must be a positive number"),
+});
+
 export const createPriceSchema = z.object({
     amount: z.number().positive("Amount must be a positive number"),
     categoryId: z.coerce.number().int().positive("Category ID must be a positive number"),
